<resources>

    <string name="app_name">Gestione Ristorante</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Activity names -->
    <string name="title_activity_reservations">Reservations</string>
    <string name="title_activity_edit_availability">Today availability</string>
    <string name="title_activity_edit_restaurant_profile">Edit profile</string>
    <string name="title_activity_edit_menu">Edit menu</string>
    <string name="title_activity_edit_dish">Edit dish</string>
    <string name="title_activity_new_dish">New dish</string>
    <string name="title_activity_edit_offer">Edit offer</string>
    <string name="title_activity_edit_offers">Edit offers</string>
    <string name="title_activity_new_offer">New offer</string>

    <!-- Edit menu dish activity strings-->
    <string name="dishPhoto">Photo</string>
    <string name="dishName">Name of the dish</string>
    <string name="dishPrice">Price</string>
    <string name="dishType">Typology</string>

    <!--- Edit offer activity strings-->
    <string name="offer_image">Offer image</string>
    <string name="offerName">Name of the offer</string>
    <string name="notesOffer">Notes</string>
    <string name="money_value">euro</string>
    <string name="offerPrice">Price</string>
    <string name="weeklyreapeted">Apply on</string>
    <string name="offers">Offers</string>


    <string name="day_monday">Mo</string>
    <string name="day_tuedsday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="day_sunday">Su</string>

    <!-- Notification strings -->

    <string name="dataSaved">DATA SAVED</string>
    <string name="error">Warning</string>
    <string name="exceptionError">Sorry, an error is occurred</string>
    <string name="error_complete">Please, complete correctly all fields</string>

    <!-- Edit menu activity strings -->
    <string name="first">Main courses</string>
    <string name="second">Second courses</string>
    <string name="dessert">Dessert</string>
    <string name="other">Other</string>

    <!-- Edit Restaurant profile activity -->
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_with_col">&#8226; Phone number:</string>
    <string name="address">Address</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="covers">Covers</string>
    <string name="logo">Logo</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="done">Done</string>
    <string name="closed">Closed</string>
    <string name="opening_time">Opening time</string>
    <string name="orarioApertura">Start Time</string>
    <string name="orarioChiusura">End Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="features">Features</string>
    <string name="wifi">WiFi</string>
    <string name="creditcard">Creditcard payment</string>
    <string name="reservation">Reservations</string>
    <string name="parking">Parking</string>
    <string name="bancomat">Bancomat</string>
    <string name="seatsoutside">Seats outside</string>
    <string name="music">Music</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>


    <string name="section_format">Hello World from section: %1$d</string>
    <string name="listaVuota">Empty List</string>
    <string name="msgListaVuotaPiatti">Add here new dishes</string>
    <string name="msgListaVuotaOfferte">Add here new offers</string>
    <string name="attenzione">Attention</string>

    <!-- Photo intent strings -->
    <string name="take_photo">Camera</string>
    <string name="chose_library">Gallery</string>
    <string name="remove_photo">Remove</string>
    <string name="add_photo">Photo</string>


    <!-- toolbar strings -->
    <string name="notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="calendar">Calendar</string>

    <!-- reservations types -->
    <string name="table">Table</string>
    <string name="table_with_orders">Table with orders</string>
    <string name="takeaway">Take-away</string>

    <string name="seats">&#8226; Reserved seats:</string>
    <string name="notes">&#8226; Notes:</string>
    <string name="dishes">Dishes details</string>
    <string name="dishes_details">&#8226; Dishes details:</string>
    <string name="offers_details">&#8226; Offers details:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="deleted">Deleted</string>
    <string name="verified">VERIFIED</string>
    <string name="reservationExpired">This reservation is expired</string>
    <string name="reservationVerified">This reservation is verified</string>
    <string name="rejectReasonText">Please indicate a reason:</string>
    <string name="yournotes">&#8226; Your notes:</string>
</resources>
