<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/childLayout"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_number"
            android:id="@+id/phone_number" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="328 1785639"
            android:id="@+id/ph_number" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seats"
            android:id="@+id/seats" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="5"
            android:id="@+id/seats_number" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dishes_details"
        android:id="@+id/dishes" />

    <ListView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/listView_dishes"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/offers_details"
        android:id="@+id/offers" />

    <ListView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/listView_offers"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/notes"
        android:id="@+id/notes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sono allergica al glutine"
        android:id="@+id/order_notes" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">
        <Button
            android:id="@+id/reject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:padding="10dp"/>
        <Button
            android:id="@+id/accept"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept" />

    </LinearLayout>

</LinearLayout>

