<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dishPhoto"
        android:id="@+id/titlePhoto_modifyMenu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageDish_modifyMenu"
        android:layout_below="@+id/titlePhoto_modifyMenu"
        android:layout_centerHorizontal="true"
        android:src="@drawable/default_dish_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dishName"
        android:id="@+id/text_dishName_modifyMenu"
        android:layout_below="@+id/imageDish_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_dishName_modifyMenu"
        android:ems="10"
        android:layout_below="@+id/text_dishName_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dishPrice"
        android:id="@+id/text_dishPrice_modifyMenu"
        android:layout_below="@+id/edit_dishName_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_dishPrice_modifyMenu"
        android:layout_below="@+id/text_dishPrice_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dishType"
        android:id="@+id/text_dishType_modifyMenu"
        android:layout_below="@+id/edit_dishPrice_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/list_dishType_modifyMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_dishType_modifyMenu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <include  layout="@layout/fat_buttons" />
</RelativeLayout>
</LinearLayout>
