<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.polito.mad_lab2.EditRestaurantProfile">

    <include layout="@layout/toolbar_view" android:layout_height="wrap_content" android:layout_width="match_parent"></include>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logo"
            android:id="@+id/textView"
            android:padding="10dp"/>
        <fragment
            xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
            android:id="@+id/logo_fragment"
            android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:isEditable="true"
            custom:isLogo="false"
            custom:heightInDP="150"
            custom:widthInDP="150"
            custom:initialBackground="@drawable/default_dish_icon"
            android:layout_below="@+id/textView"   />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/covers"
            android:id="@+id/cover"
            android:paddingTop="10dp"
            android:layout_below="@id/logo_fragment" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cover">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <fragment
                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
                    android:id="@+id/cover_fragment1"
                    android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    custom:isEditable="true"
                    custom:isLogo="false"
                    custom:heightInDP="150"
                    custom:widthInDP="150"
                    custom:initialBackground="@drawable/default_dish_icon"
                    />



                <fragment
                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
                    android:id="@+id/cover_fragment2"
                    android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:isEditable="true"
                    custom:isLogo="false"
                    custom:heightInDP="150"
                    custom:widthInDP="150"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    custom:initialBackground="@drawable/default_dish_icon"
                      />
                <fragment
                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
                    android:id="@+id/cover_fragment3"
                    android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:isEditable="true"
                    custom:isLogo="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    custom:heightInDP="150"
                    custom:widthInDP="150"
                    custom:initialBackground="@drawable/default_dish_icon"
                      />
                <fragment
                    xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
                    android:id="@+id/cover_fragment4"
                    android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:isEditable="true"
                    custom:isLogo="false"
                    custom:heightInDP="150"
                    custom:widthInDP="150"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    custom:initialBackground="@drawable/default_dish_icon"
                      />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/restaurant_name"
            android:id="@+id/restaurant_name"
            android:layout_below="@id/horizontalScrollView"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:layout_below="@id/restaurant_name"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/address"
            android:id="@+id/address"
            android:layout_below="@id/edit_name"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_address"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:layout_below="@id/address"
            android:padding="10dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/phone_number"
            android:id="@+id/phone"
            android:layout_below="@id/edit_address"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_phone"
            android:inputType="phone"
            android:ems="10"
            android:layout_below="@id/phone"
            android:padding="10dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_below="@id/edit_phone"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textColor="@android:color/black"
            android:layout_below="@id/email"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/description"
            android:layout_below="@id/edit_email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_description"
            android:inputType="textMultiLine"
            android:ems="10"
            android:textColor="@android:color/black"
            android:layout_below="@id/description"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/opening_time"
            android:id="@+id/opening_time"
            android:layout_below="@id/edit_description"
            />
        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/timetable"
            android:layout_below="@id/edit_description"
            android:name="it.polito.mad_lab2.TimeRangeSelecterActivityFragment"
            tools:layout="@layout/fragment_time_range_selecter"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    </ScrollView>
</LinearLayout>