<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<include layout="@layout/toolbar_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"></include>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/dishPhoto"
        android:id="@+id/titlePhoto_modifyOffer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
    -->
    <fragment
        xmlns:custom="http://schemas.android.com/apk/res/it.polito.mad_lab2"
        android:id="@+id/imageOffer_modifyOffer"
        android:name="it.polito.mad_lab2.photo_viewer.PhotoViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        custom:isEditable="true"
        custom:isLogo="false"
        custom:heightInDP="200"
        custom:widthInDP="200"
        custom:initialBackground="@drawable/default_dish_icon" />

    <!--
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageOffer_modifyOffer"
        android:layout_below="@+id/titlePhoto_modifyOffer"
        android:layout_centerHorizontal="true"
        android:src="@drawable/default_dish_icon"/>
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/offerName"
        android:id="@+id/text_offerName_modifyOffer"
        android:layout_below="@+id/imageOffer_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_offerName_modifyOffer"
        android:ems="10"
        android:layout_below="@+id/text_offerName_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/offerPrice"
        android:id="@+id/text_offerPrice_modifyOffer"
        android:layout_below="@+id/edit_offerName_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_offerPrice_modifyOffer"
        android:layout_below="@+id/text_offerPrice_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/notesOffer"
        android:id="@+id/text_offerNote_modifyOffer"
        android:layout_below="@+id/edit_offerPrice_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_offerNote_modifyOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_offerNote_modifyOffer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:ems="10"
        />

</RelativeLayout>
</LinearLayout>
